--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         </header>
         <section id="content">
         </section>
+        <footer></footer>
     </div>
     <script type="text/javascript">
         var qs = (function(a) {
